# cursor-agents-workshop

./: .cursorignore  .gitignore  Makefile  PROMPTS.md  README.md  pyproject.toml  workshop.ps1
.cursor/rules/: 00_orchestrator.mdc  01_data_eng.mdc  02_analytics.mdc  03_ml.mdc  04_viz.mdc  05_api.mdc
data/: download.py
