[project]
name = "cursor-agents-workshop"
version = "0.1.0"
description = "60-Minuten Workshop: Cursor Subagenten fuer DE, Analytics, ML, Viz, API"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.1.0",
    "polars>=1.12.0",
    "pyarrow>=17.0.0",
    "pandas>=2.2.0",
    "jupyter>=1.1.0",
    "scikit-learn>=1.5.0",
    "mlflow>=2.17.0",
    "streamlit>=1.39.0",
    "plotly>=5.24.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "tabulate>=0.9.0",
    "joblib>=1.4.0",
]
